fixed loading not centered && disabled auth button after auth request

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -41,6 +41,7 @@ body {
 
 
 #root {
+  position: relative;
   display: flex;
   flex: 1;
   flex-direction: column;
